--- a/webextensions/package.json
+++ b/webextensions/package.json
@@ -15,5 +15,8 @@
     "eslint-plugin-import": "^2.17.2",
     "jsonlint-cli": "*",
     "lodash": ">=4.17.13"
+  },
+  "dependencies": {
+    "tunnel-agent": "^0.6.0"
   }
 }
